Closed
Bug 141021
Opened 23 years ago
Closed 23 years ago
text is diplayed over the right border
Categories
(Core :: Layout: Tables, defect, P2)
Core
Layout: Tables
Tracking
()
VERIFIED
FIXED
mozilla1.0.1
People
(Reporter: etreise, Assigned: karnaze)
References
()
Details
(Keywords: topembed+, Whiteboard: [adt2] [ETA 10/21])
Attachments
(3 files, 5 obsolete files)
23 bytes,
text/plain
|
Details | |
982 bytes,
text/html
|
Details | |
3.41 KB,
patch
|
bernd_mozilla
:
review+
waterson
:
superreview+
chofmann
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.0rc1)
Gecko/20020417
BuildID: 2002041711
The following title " In Office-Dateien steckt mehr als nur der reine
Dokumenteninhalt. Wer Daten austauscht, kann so unwissentlich heikle
Zusatzinformationen weitergeben. Wir erklären, wie Sie das Risiko minimieren."
in the page at http://www.tecchannel.de/software/896/index.html is not displayed
as a block, like the test below. It goes over the right border of thhe site.
In IE this title is displayed as a block, so it is readable.
Reproducible: Always
Steps to Reproduce:
1.goto http://www.tecchannel.de/software/896/index.html
2. look on the title of the article right to the msoffice-picture
Actual Results: text is diplayed over the right border of the site
Expected Results: text should be formated as a block
Comment 1•23 years ago
|
||
Comment 2•23 years ago
|
||
Comment 3•23 years ago
|
||
Argh. The test case above (attachment 81575 [details]) seems to bomb when I load it
locally, but not when I load it from bugzilla. The inline scripts make be
believe it's some sort of table incremental reflow problem.
Assignee: attinasi → waterson
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•23 years ago
|
Status: NEW → ASSIGNED
OS: Windows XP → All
Hardware: PC → All
Comment 4•23 years ago
|
||
Attachment #81574 -
Attachment is obsolete: true
Comment 5•23 years ago
|
||
This test case works a bit more reliably: you may have to reload a few times to
reproduce the bug, so it's best if you can save the stuff locally.
Attachment #81575 -
Attachment is obsolete: true
Comment 6•23 years ago
|
||
Got rid of a few tables. The problem appears to be that the fixed-width cell is
flowing its contents at an unconstrained width, and then never reflowing them
again:
...
tblO 0x82c587c r=0 a=UC,UC c=0,0 cnt=50
tbl 0x82c5a50 r=0 a=UC,UC c=8341,UC cnt=51
rowG 0x82c5b30 r=0 a=UC,UC c=UC,UC cnt=52
row 0x82c5bdc r=0 a=UC,UC c=UC,UC cnt=53
cell 0x82c5cf4 r=0 a=UC,UC c=8341,UC cnt=54
block 0x82c5d54 r=0 a=UC,UC c=UC,UC cnt=55
text 0x82c5e0c r=0 a=UC,UC c=UC,UC cnt=56
text 0x82c5e0c d=25042,323 me=2603
block 0x82c5d54 d=24966,323 me=2603
cell 0x82c5cf4 d=25080,437 me=2717
row 0x82c5bdc d=UC,437
rowG 0x82c5b30 d=UC,437
colG 0x82c5eb0 r=0 a=UC,UC c=UC,UC cnt=57
col 0x82c5f24 r=0 a=0,0 c=8341,UC cnt=58
col 0x82c5f24 d=0,0
colG 0x82c5eb0 d=0,0
tbl 0x82c5a50 d=8341,437 me=8341
tblO 0x82c587c d=8341,437 me=8341
...
karnaze: why wouldn't it set the available width to be 8341 twips, too?
Attachment #81578 -
Attachment is obsolete: true
Comment 7•23 years ago
|
||
-> HTML tables. I'll let the pros handle this. :-)
Assignee: waterson → karnaze
Status: ASSIGNED → NEW
Component: Layout → HTMLTables
QA Contact: petersen → amar
Comment 8•23 years ago
|
||
karnaze: to reliably reproduce this bug, save attachment 81602 [details] and attachment
81557 [details] [diff] [review] locally. You'll need to fix the HTML file so that it properly refers to
the out-of-line JavaScript.
If i load <a HREF="showattachment.cgi?attach_id=81602">attachment 81602 [details]</a> the
text stays inside the table. But if i go back in history and go forward again to
the testpage, the text goes over the right border.
Comment 10•23 years ago
|
||
The patch in bug 120107 appears to fix this.
Assignee: karnaze → waterson
Depends on: 120107
Assignee | ||
Comment 11•23 years ago
|
||
Taking the bug. I'll be attaching a patch, since the revised patch in bug 120107
does not fix this.
Assignee: waterson → karnaze
Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla1.0.1
Assignee | ||
Comment 12•23 years ago
|
||
Assignee | ||
Comment 13•23 years ago
|
||
Attachment #82603 -
Attachment is obsolete: true
Assignee | ||
Comment 14•23 years ago
|
||
Attachment #82606 -
Attachment is obsolete: true
Comment 15•23 years ago
|
||
Comment on attachment 82630 [details] [diff] [review]
revised patch
r=bernd
Chris could you please update the comment above the reflow optimization in
nsTableRowGroupFrame.cpp.
Attachment #82630 -
Flags: review+
Comment 16•23 years ago
|
||
Comment on attachment 82630 [details] [diff] [review]
revised patch
sr=waterson
Comment 17•23 years ago
|
||
Comment on attachment 82630 [details] [diff] [review]
revised patch
sr=waterson
Attachment #82630 -
Flags: superreview+
Assignee | ||
Comment 18•23 years ago
|
||
FIXED_ON_TRUNK
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 19•23 years ago
|
||
Nominating for nsbeta1 and topembed. Needed for a bank customer
in Japan.
Comment 20•23 years ago
|
||
Can we check this into 1.0.2 branch?
Assignee | ||
Comment 21•23 years ago
|
||
I think the risk of this patch for the m1.0 branch is low because (1) it has
been on the trunk since 5/9/2, (2) it passes all of the regression tests on the
branch, (3) the patch added a needed reflow to fix the bug, so probably in the
worst case (and this assumes that the patch is not correct in general), a page
might get an extra reflow.
No longer depends on: 120107
Comment 22•23 years ago
|
||
Marking as nsbeta1+/topembed+ as this is effecting a major bank site in Japan.
Nominating for 1.0 branch.
amar: can you pls verify this as fixed on the trunk? thanks!
Comment 23•23 years ago
|
||
Per adt, please verify on trunk for adt approval.
Comment 24•23 years ago
|
||
Verified on todays trunk builds: 2002-10-27-08-trunk builds on Win2K and
Linux7.1. The given URL and the testcases work fine. We can check the patch into
the 1.0.2 branch.
Comment 25•23 years ago
|
||
Per amar's comment #24, this bug is now verified as dixed.
Status: RESOLVED → VERIFIED
Updated•23 years ago
|
Whiteboard: [adt2] → [adt2] [ETA 10/21]
Comment 26•23 years ago
|
||
Comment on attachment 82630 [details] [diff] [review]
revised patch
a=chofmann for 1.0.2
Attachment #82630 -
Flags: approval+
Comment 27•23 years ago
|
||
discussed in bBird team mtg. plussing for adt
Comment 28•23 years ago
|
||
Marking as Mozilla1.0.2+ per Comment #26 From chris hofmann.
karnaze: pls land this asap. Thanks!
Keywords: mozilla1.0.2 → mozilla1.0.2+
Comment 30•23 years ago
|
||
Internal reference:
http://bugscape.mcom.com/show_bug.cgi?id=20525
amar please verify as fixed against branch
Comment 31•23 years ago
|
||
It helped me to clean the cache for each test instance to see
the effect of this fix correctly.
Comment 32•23 years ago
|
||
Verified on Branch build: 2002-10-23-08-1.0 on WIN2K and Linux7.1
Keywords: fixed1.0.2 → verified1.0.2
You need to log in
before you can comment on or make changes to this bug.
Description
•