bug 141021 - skip row reflow optimization of cell when the cell hasn't had a pass2 reflow. sr=waterson, r=bernd.